# reflect

./: README.md  img2json.sh
backend/: .gitignore  Cargo.toml  README.md
backend/src/: README.md  error.rs  main.rs  model.rs  service.rs
backend/src/model/: mod.rs  picture.rs
backend/src/utils/: config.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/components/: MainPage.vue  PicCard.vue
