[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = [ "http2" ] }
tokio = { version = "1.37", features = [ "full" ] }
serde = "1.0"
rbatis = { version = "4.5.21" }
rbdc-pg = "4.5"
