[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = [ "http2" ] }
tokio = { version = "1.37", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "debug-print" ] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
